--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <a href="">Bugs</a>
             <a href="">Daffy</a>
             <a href="">Tweety/Sylvester</a>
-            <a href="">Road Runner/Wild E Coyote</a>
+            <a href="">Road Runner/Wile E. Coyote</a>
         </nav>
     </header>
     <section class="about">
         <h2 class="heading">About</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ducimus delectus ratione impedit soluta est veniam earum illo dignissimos at, perferendis sint totam consectetur repellat, dolor iusto quibusdam fugiat error quia? Mollitia ex et sit, ut cupiditate aut vel aliquid, repellendus dolores dicta quaerat numquam ratione inventore modi ipsa! Assumenda?</p>
     </section>
-    <section class="container">
+    <section class="container crew">
         <div class="director">
             <h3>Directors</h3>
             <ul>
@@ -68,6 +68,19 @@
                 <li>Stan Frebery</li>
             </ul>
         </div>
+    </section>
+    <section class="tune-squad container">
+        <div class="bugs"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/17/Bugs_Bunny.svg/1200px-Bugs_Bunny.svg.png" alt="Bugs Bunny"></div>
+        <div class="daffy"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/Daffy_Duck.svg/1200px-Daffy_Duck.svg.png" alt="Daffy"></div>
+        <div class="tweety"><img src="https://vignette.wikia.nocookie.net/looneytunes/images/7/79/Tweety.png/revision/latest?cb=20130218203946" alt="Tweety"></div>
+
+        <div class="sylvester"><img src="https://www.wbkidsgo.com/Portals/4/Images/Content/Characters/Sylvester/sylvester-body.png" alt="Sylvester"></div>
+        <div class="porky"><img src="https://vignette.wikia.nocookie.net/dragon-rap-battles/images/f/fc/Porky_Pig.gif/revision/latest?cb=20151011164423" alt="Porky"></div>
+        <div class="wile"><img src="https://tropeanddagger.files.wordpress.com/2015/02/wile-e-coyote.gif" alt="wile-e-coyote"></div>
+        <div class="roadrunner"><img src="https://upload.wikimedia.org/wikipedia/en/e/ee/Roadrunner_looney_tunes.png" alt="roadrunner"></div>
+
+        <div class="foghorn"><img src="http://clipart.toonarific.com/data/media/42/foghorn001.gif" alt="foghorn"></div>
+        
     </section>
     
 </body>
