Add bugs.html and css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <img src="https://fanart.tv/api/download.php?type=download&image=1896&section=1" alt="Looney Tunes Banner">
         </div>
         <nav>
-            <a href="">Home</a>
-            <a href="">Bugs</a>
-            <a href="">Daffy</a>
-            <a href="">Tweety/Sylvester</a>
-            <a href="">Road Runner/Wile E. Coyote</a>
+            <a href="index.html">Home</a>
+            <a href="bugs.html">Bugs</a>
+            <a href="daffy.html">Daffy</a>
+            <a href="tweety.html">Tweety/Sylvester</a>
+            <a href="roadrunner.html">Road Runner/Wile E. Coyote</a>
         </nav>
     </header>
     <section class="about">
