added footer and update nav

--- a/bugs.html
+++ b/bugs.html
@@ -58,6 +58,8 @@
             <img src="https://vignette.wikia.nocookie.net/looneytunes/images/2/27/Bugs-bunny.jpg/revision/latest?cb=20090825184829" alt="Space Jams Bugs">
         </div>
     </section>
-    
+    <footer>
+        <p>All images and content belong to their rightful owners. This site was created by Jessica Chambers.</p>
+    </footer>
 </body>
 </html>
