--- a/daffy.html
+++ b/daffy.html
@@ -54,10 +54,10 @@
         <div class="img-daffy-2">
             <img src="https://maryannemistretta.files.wordpress.com/2012/11/daffy-duck.png" alt="daffy">
         </div>
-        <div class="img-daffy-3">
-            <img src="http://2.bp.blogspot.com/-scDnuT79f1c/T89kRB1u09I/AAAAAAAAAbk/rM_zexWw1rU/s1600/Daffy_Duck_Looney_Tunes_Wallpaper_3.jpg" alt="daffy">
-        </div>
     </section>
+    <footer>
+        <p>All images and content belong to their rightful owners. This site was created by Jessica Chambers.</p>
+    </footer>
     
 </body>
 </html>
