--- a/tweety.html
+++ b/tweety.html
@@ -57,9 +57,10 @@
                 <li>Mel Blanc(1938-1989)</li>
                 <li>Jeff Bergman (1990–1993, 2011–present)</li>
                 <li>Greg Burson (1993–1997)</li>
-                <li>Frank Gorshin (1996)</li>
-                <li>Dee Bradley Baker (1996, 2015-present)</li>
-                <li>eff Bennett (2004) </li>
+                <li>Bob Bergen (1990-present)</li>
+                <li>Joe Alaskey (1995-2016)</li>
+                <li>Eric Goldberg (1996-2003)</li>
+                <li>Billy West (2003)</li>
                 <li>Samuel Vincent (2001–2006)</li>
             </ul>
         </div>
@@ -77,10 +78,9 @@
         <div class="img-tweety-2">
             <img src="https://img-3.journaldesfemmes.com/pnk2EEHk9CIzQN9BioDtHwujBSo=/533x/smart/3d23776381024fe19de54ba6a3ea4352/ccmcms-jdf/10006676.jpg" alt="tweety">
         </div>
-        <div class="img-tweety-3">
-            <img src="" alt="tweety and Sylvester">
-        </div>
     </section>
-    
+    <footer>
+        <p>All images and content belong to their rightful owners. This site was created by Jessica Chambers.</p>
+    </footer>
 </body>
 </html>
