--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     <section class="about">
         <h2 class="heading">About</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ducimus delectus ratione impedit soluta est veniam earum illo dignissimos at, perferendis sint totam consectetur repellat, dolor iusto quibusdam fugiat error quia? Mollitia ex et sit, ut cupiditate aut vel aliquid, repellendus dolores dicta quaerat numquam ratione inventore modi ipsa! Assumenda?</p>
+        <p>Looney Tunes is an American animated series of comedy short films produced by Warner Bros. from 1930 to 1969 during the golden age of American animation, alongside its sister series Merrie Melodies.</p>
+        <h2>Studio</h2>
+        <p>Harman-Ising Productions &emsp; Leon Schlesinger Productions &emsp; Warner Bros. Cartoons &emsp; DePatie–Freleng Enterprises &emsp; Format Productions &emsp; Warner Bros.-Seven Arts Animation&emsp;  Warner Bros. Animation</p>
     </section>
     <section class="container crew">
         <div class="director">
@@ -50,14 +52,6 @@
                 <li>William Lava</li>
             </ul>
         </div>
-        <div class="story">
-            <h3>Story</h3>
-            <ul>
-                <li>Warren Foster</li>
-                <li>Tedd Pierce</li>
-                <li>Michael Maltese</li>
-            </ul>
-        </div>
         <div class="voices">
             <h3>Voices</h3>
             <ul>
@@ -82,6 +76,8 @@
         <div class="foghorn"><img src="http://clipart.toonarific.com/data/media/42/foghorn001.gif" alt="foghorn"></div>
         
     </section>
-    
+    <footer>
+        <p>All images and content belong to their rightful owners. This site was created by Jessica Chambers.</p>
+    </footer>
 </body>
 </html>
